# moctale-moderation-ai

./: .gitignore  PROJECT_BRIEF.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_space.txt  rewrite_service.py
.chroma_db/: chroma.sqlite3
.github/workflows/: benchmark.yml  ci.yml
config/: community_terms.yaml  policy_rules.yaml  risk_weights.yaml
data/: data_dictionary.csv  moderation_examples.csv
docker/: Dockerfile  docker-compose.yml
docs/: AGENT_REVIEW_SUMMARY.md  CONTINUE_IN_NEW_CHAT.md  DATA_PROVENANCE.md  dataset_card.md  labeling_guidelines.md  model_plan.md  production_system_design.md  synthetic_generation.md
moctale_moderation/: __init__.py  audit.py  cache.py  engine.py  evaluator.py  logging_config.py  metrics.py  ml_scorer.py  patterns.py  schemas.py  service.py
moctale_moderation/agents/: __init__.py  base.py  context_agent.py  heuristic_agent.py  intake_agent.py  language_agent.py  learning_agent.py  ml_toxicity_agent.py  policy_agent.py  review_queue_agent.py
moctale_moderation/policy/: __init__.py  rules.py  store.py
notebooks/: moctale_moderation_ai_demo.ipynb
reports/: class_distribution.csv  duplicates_report.csv  pii_scan_results.csv  quality_report.md
scripts/: add_rule.py  benchmark_engine.py  build_dataset.py  create_notebook.py  evaluate.py  index_policy.py  test_reddit_live.py  train_weights.py  validate_dataset.py
tests/: test_accuracy.py  test_engine.py
